added images and a navigation list

--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="subpage1.html" target=_self title="youtube.com"> <!-- open links to another page, put URL-->
-        Opens up youtube, sike!
-    </a>
-    <p>Adding new line with this thang</p>
+    <div class="page-wrapper"> 
+        <aside class="nav-bar">
+            <h3 class="nav">Naviagation</h3>
+            <ul>
+                <li>
+                    <a href="" class="nav-button">Technical</a>
+                </li>
+                <li>
+                    <a href="" class="nav-button">Service</a>
+                </li>
+                <li>
+                    <a href="" class="nav-button">Resume</a>
+                </li>
+                <li>
+                    <a href="" class="nav-button">About Me</a>
+                </li>
+                <li>
+                    <a href="" class="nav-button">AI Page</a>
+                </li>
+            </ul>
+        </aside> 
+
+        <div class="home-box1">
+            <h1 class="Name">Diego Martinez</h1>
+            <p class="Intro">I'm currently studying Computer Scienceat at the engineering school of Texas A&M University.</p>
+            <img class="image1" src="img/image1.jpg" alt="Wedding picture with Llamas">
+        </div>
+        
+        <a href="subpage1.html" target=_self title="youtube.com"> <!-- open links to another page, put URL-->
+            Opens up youtube, sike!
+        </a>
+        <p>Adding new line with this thang</p>
+    </div>
 </body>
 </html>
