added techinical page and formalities almong with the style sheet for techincal page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
-                ><li> <a href="" class="nav-button">Technical</a> </li
+                ><li> <a href="technical.html" class="nav-button">Technical</a> </li
                 ><li> <a href="" class="nav-button">Service</a> </li
                 ><li> <a href="" class="nav-button">Resume</a> </li
                 ><li> <a href="" class="nav-button">About</a> </li
