--- a/ai-page.html
+++ b/ai-page.html
@@ -17,7 +17,7 @@
 <nav>
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="#">Technical</a></li>
+    <li><a href="technical.html">Technical</a></li>
     <li><a href="#">Service</a></li>
     <li><a href="#">Resume</a></li>
     <li><a href="#">About Me</a></li>
