--- a/ai-page.html
+++ b/ai-page.html
@@ -18,9 +18,9 @@
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="technical.html">Technical</a></li>
-    <li><a href="#">Service</a></li>
-    <li><a href="#">Resume</a></li>
-    <li><a href="#">About Me</a></li>
+    <li><a href="service.html">Service</a></li>
+    <li><a href="resume.html">Resume</a></li>
+    <li><a href="about.html">About Me</a></li>
     <li><a href="ai-page.html">AI Page</a></li>
   </ul>
 </nav>
