--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
                 ><li> <a href="technical.html" class="nav-button">Technical</a> </li
-                ><li> <a href="" class="nav-button">Service</a> </li
-                ><li> <a href="" class="nav-button">Resume</a> </li
-                ><li> <a href="" class="nav-button">About</a> </li
+                ><li> <a href="service.html" class="nav-button">Service</a> </li
+                ><li> <a href="resume.html" class="nav-button">Resume</a> </li
+                ><li> <a href="about.html" class="nav-button">About</a> </li
                 ><li> <a href="ai-page.html" class="nav-button">AI Page</a> </li
             ></ul>
         </nav>
@@ -25,7 +25,7 @@
             <div class="box">
                 <div class="content">
                     <div>
-                        <p class="name">Diego Martinez</p>
+                        <p class="title1">Diego Martinez</p>
                         <p class="intro">I'm currently studying Computer Science at the engineering school of Texas A&M University.</p>
                     </div> 
                     <div>
@@ -33,11 +33,11 @@
                     </div>
                 </div>
                 <div class="link-hub">
-                    <a href="https://www.instagram.com/diegocantskate/?hl=en"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="https://www.linkedin.com/" class="linkedin" title="Go to my linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-brands fa-square-github"></i></a>
-                    <button onclick="copyFucntion()"><i class="fa-solid fa-square-envelope"></i></button>
-                    <button type="submit"><i class="fa-solid fa-wand-magic-sparkles"></i></button>
+                    <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/dxmar03" title="Go to my github"><i class="fa-brands fa-square-github"></i></a>
+                    <button onclick="copyFucntion()" title="copy email"><i class="fa-solid fa-square-envelope"></i></button>
+                    <button onclick="switchStyle()" type="submit" title="switch layout"><i class="fa-solid fa-wand-magic-sparkles"></i></button>
                 </div>
             </div>
         </section>
@@ -50,7 +50,7 @@
                         <input tpye="text" name="email" placeholder="Your Email" required> 
                         <input tpye="text" name="name" placeholder="Your Name" required> 
                         <textarea name="message" placeholder="Your message" rows="6"></textarea>
-                        <button type="submit" class="btn1">Send</button>
+                        <button onclick="updateSheet()" type="submit" class="btn1">Send</button>
                     </form>
                 </div>
             </div>
