--- a/technical.html
+++ b/technical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="technical-page.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
-                ><li> <a href="" class="nav-button">Technical</a> </li
-                ><li> <a href="" class="nav-button">Service</a> </li
-                ><li> <a href="" class="nav-button">Resume</a> </li
-                ><li> <a href="" class="nav-button">About</a> </li
+                ><li> <a href="technical.html" class="nav-button">Technical</a> </li
+                ><li> <a href="service.html" class="nav-button">Service</a> </li
+                ><li> <a href="resume.html" class="nav-button">Resume</a> </li
+                ><li> <a href="about.html" class="nav-button">About</a> </li
                 ><li> <a href="ai-page.html" class="nav-button">AI Page</a> </li
             ></ul>
         </nav>
@@ -25,20 +25,20 @@
             <div class="box">
                 <div class="content">
                     <div>
-                        <p class="name">Technical Experience</p>
-                        <p class="point">F1-Project <a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="title3">Technical Experience</p>
+                        <p class="point">F1-Project <a href="https://github.com/dxmar25/myF1Project" class="github" title="Go to this project"><i class="fa-solid fa-link"></i></a></p>
                         <ul>
                             <li><p class="discription">Designed an automated graph, using Python, that shows the distance margins in the top 3 finishers to scale.</p></li>
                         </ul>
-                        <p class="point">Mods for Rounds Game<a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">Mods for Rounds Game<a href="https://github.com/JustStokes03/BetterStats" class="github" title="Go to this project"><i class="fa-solid fa-link"></i></a></p>
                         <ul>
                             <li><p class="discription">Make a real-time stats analysis mod for the game. Displaying dynamic stats as players upgrade there character.</p></li>
                         </ul>
-                        <p class="point">Arduino Embedded Screen (Unfinished)</p>
+                        <p class="point">Arduino Embedded Screen (Future)</p>
                         <ul>
                             <li><p class="discription">Make an Arduino-based LED screen that can display a modified Spotify API on the current music being played on my account.</p></li>
                         </ul>
-                        <p class="point">Senior Capstone Project (Future)</p>
+                        <p class="point">Senior Capstone Project (Future)<a href="https://engineering.tamu.edu/mechanical/academics/capstone-design/index.html" class="github" title="TAMU homepage for capstone design"><i class="fa-solid fa-link"></i></a></p>
                         <ul>
                             <li><p class="discription">Complete whatever the options are at the time of declaring a capstone group.</p></li>
                         </ul>
