Iteration 1: Added Comments and reformated a lot of the code to be more readable. Fixed some issues with the html link view, specifically the icons to external links.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego Martinez - Home</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
 <body>
     <div class="page-wrapper"> 
+
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
@@ -28,16 +30,14 @@
                         <p class="title1">Diego Martinez</p>
                         <p class="intro">I'm currently studying Computer Science at the engineering school of Texas A&M University.</p>
                     </div> 
-                    <div>
-                        <img class="image1" src="img/image1.jpg" title="Wedding picture with Llamas" height="200" width="200">
-                    </div>
+                    <img class="image1" src="img/image1.jpg" title="Wedding picture with Llamas" height="200" width="200">
                 </div>
                 <div class="link-hub">
-                    <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/dxmar03" title="Go to my github"><i class="fa-brands fa-square-github"></i></a>
-                    <button onclick="copyFucntion()" title="copy email"><i class="fa-solid fa-square-envelope"></i></button>
-                    <button onclick="switchStyle()" type="submit" title="switch layout"><i class="fa-solid fa-wand-magic-sparkles"></i></button>
+                    <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram" target="_blank"><i class="fa-brands fa-square-instagram"></i><p class="html_view">Instagram</p></a>
+                    <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i><p class="html_view">Linkedin</p></a>
+                    <a href="https://github.com/dxmar03" title="Go to my github" target="_blank"><i class="fa-brands fa-square-github"></i><p class="html_view">Github</p></a>
+                    <button onclick="copyFucntion()" title="copy email"><i class="fa-solid fa-square-envelope"></i><p class="html_view">Copy Email</p></button>
+                    <button onclick="switchStyle()" type="submit" title="switch layout"><i class="fa-solid fa-wand-magic-sparkles"></i><p class="html_view">Magic Switch</p></button>
                 </div>
             </div>
         </section>
