--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego Martinez - Resume</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
 <body>
     <div class="page-wrapper"> 
+
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
@@ -25,8 +27,9 @@
             <div class="box">
                 <p class="title2">Technical Skills / Areas Of Interest</p>
                 <div class="content">
+
                     <div>
-                        <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" class="github" title="Vist Course Catalog"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" target="_blank" title="Vist Course Catalog"><i class="fa-solid fa-link"></i><p class="html_view">Physics Minor Course Catalog</p></a></p>
                         <ul>
                             <li><p class="discription">Understanding the physical world and its intricacies is a great passion of mine. Its mathematical implications couple well with computer science. I have interest in electrical systems and there application within both fields. </p></li>
                         </ul>
@@ -35,9 +38,10 @@
                             <li><p class="discription">As shown in the Technical section, I am extremely interested in learning about and applying mathematical, physical, and computer science components to all sorts of electrical systems. I find lower-level abstraction the most elegant.</p></li>
                         </ul>
                     </div> 
+
                     <div>
                         <!-- <img class="image1" src="img/image4.JPG" title="Rounds Screen Shot" height="200" width="200"> -->
-                        <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" class="github" title="Vist Course Catalog"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" target="_blank" title="Vist Course Catalog"><i class="fa-solid fa-link"></i><p class="html_view">Comp Sci Course Catalog</p></a></p>
                         <ul>
                             <li><p class="discription">Coming from the Texas A&M School of Engineering I have a lot of math experience. Notably, Calculus 1 through Calculus 3, Different Equations, Linear Algebra, and Discrete Math. Knowledge of Engineering Statistics in association with R Studio is known. </p></li>
                         </ul>
@@ -50,6 +54,7 @@
                             <li><p class="discription">Visual Studio Code, Eclipse, Arduino IDE, Spyder IDE, R Studio, Linux and Windows OS.</p></li>
                         </ul>
                     </div>
+
                 </div>
             </div>
         </section>
