--- a/about.html
+++ b/about.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego Martinez - About</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
 <body>
     <div class="page-wrapper"> 
+
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
@@ -24,8 +26,10 @@
         <section>
             <div class="box">
                 <p class="title1">More About Me</p>
+
                 <div class="content">
-                    <div>
+
+                    <div class="about-image-text-container">
                         <!-- <p class="point">F1-Project <a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p> -->
                         <ul>
                             <li><p class="about-discription">I was born and raised in South Texas. Specifically, a region called the Rio Grande Valley in the small city of Weslaco, TX. Sometime in Elementary school, I joined a weekend program that introduced kids to simple robotics and scratch code. That initial introduction to robotics, and in general programming, made me increasingly interested in the field I am currently studying.  </p></li>
@@ -37,11 +41,11 @@
                         <ul>
                             <li><p class="about-discription">During high school, I was introduced to Java programming by my calculus teacher. He was the one that pushed me to study computer science in college. So, when it came time to apply for colleges, Texas A&M was the only right choice.</p></li>
                         </ul>
-                        <img class="image1" src="img/image6.jpg" title="Microcontroller" height="200" width="200">
+                        <img class="image6" src="img/image6.jpg" title="Microcontroller" height="200" width="200">
                     </div> 
 
-                    <div>
-                        <img class="image1" src="img/image5.jpg" title="Rounds Screen Shot" height="200" width="200">
+                    <div class="about-image-text-container">
+                        <img class="image5" src="img/image5.jpg" title="Rounds Screen Shot" height="200" width="200">
                         <ul>
                             <li><p class="about-discription-last">Committing to Texas A&M was a life-changing experience. Especially being emitted into the Engineering school. I had never faced such immense struggles, not only academically but personally. Being so far from home and not knowing anyone doing what I was trying left me to overcome some great hurdles. Nevertheless, pressure creates diamonds. Now, approaching my senior year, I'm currently “out of the frying pan and into the fire,” for lack of a better term. I know I can achieve, learn, and apply, anything I put my mind to.  </p></li>
                         </ul>
@@ -49,6 +53,11 @@
                             <li><p class="about-discription">In my time at Texas A&M, I was fortunate enough to travel to places I’ve never formally been to. Growing up in a small border town left me with much to desire. So being able to see and visit so many different cities across Texas has been a privilege. These experiences have been eye-opening and truly pushed me to set my goals high. Aim for the sky, shoot for the stars. </p></li>
                         </ul>
                     </div>
+                    
                 </div>
+
             </div>
         </section>
+
+    </div>
+</body>
