--- a/service.html
+++ b/service.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego Martinez - Service</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
 <body>
     <div class="page-wrapper"> 
+
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
@@ -24,20 +26,21 @@
         <section>
             <div class="box">
                 <div class="content">
+
                     <div>
                         <p class="title3">Service Experience</p>
-                        <p class="point">TAMU Student Bonfire<a href="https://bonfire.ag/" class="github" title="Visit the Bonfire Homepage"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">TAMU Student Bonfire<a href="https://bonfire.ag/" target="_blank" title="Visit the Bonfire Homepage"><i class="fa-solid fa-link"></i><p class="html_view">Bonfire</p></a></p>
                         <ul>
                             <li><p class="discription">A member of Hart Hall Student Bonfire. Dedicating weekends to assist in the completion of one of Aggieland's oldest traditions. </p></li>
                         </ul>
-                        <p class="point">The Big Event<a href="https://bigevent.tamu.edu/about/" class="github" title="Visit the Big Event Homepage"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">The Big Event<a href="https://bigevent.tamu.edu/about/" target="_blank" title="Visit the Big Event Homepage"><i class="fa-solid fa-link"></i><p class="html_view">Big Event</p></a></p>
                         <ul>
                             <li><p class="discription">Once a year, every year, students of TAMU help clean and beautify the Bryan / College Station Area.</p></li>
                         </ul>
                     </div> 
-                    <div>
-                        <img class="image1" src="img/image4.JPG" title="Rounds Screen Shot" height="200" width="200">
-                    </div>
+
+                    <img class="image4" src="img/image4.JPG" title="Rounds Screen Shot" height="200" width="200">
+
                 </div>
             </div>
         </section>
