--- a/technical.html
+++ b/technical.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego Martinez - Technical</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
 <body>
     <div class="page-wrapper"> 
+
         <nav>
             <ul>
                 <li> <a href="index.html" class="nav-button">Home</a> </li
@@ -24,13 +26,14 @@
         <section>
             <div class="box">
                 <div class="content">
-                    <div>
+
+                    <div class="text-container">
                         <p class="title3">Technical Experience</p>
-                        <p class="point">F1-Project <a href="https://github.com/dxmar25/myF1Project" class="github" title="Go to this project"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">F1-Project <a href="https://github.com/dxmar25/myF1Project" title="Go to this project" target="_blank"><i class="fa-solid fa-link"></i><p class="html_view">This Project</p></a></p>
                         <ul>
                             <li><p class="discription">Designed an automated graph, using Python, that shows the distance margins in the top 3 finishers to scale.</p></li>
                         </ul>
-                        <p class="point">Mods for Rounds Game<a href="https://github.com/JustStokes03/BetterStats" class="github" title="Go to this project"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">Mods for Rounds Game<a href="https://github.com/JustStokes03/BetterStats" title="Go to this project" target="_blank"><i class="fa-solid fa-link"></i><p class="html_view">This Project</p></a></p>
                         <ul>
                             <li><p class="discription">Make a real-time stats analysis mod for the game. Displaying dynamic stats as players upgrade there character.</p></li>
                         </ul>
@@ -38,15 +41,20 @@
                         <ul>
                             <li><p class="discription">Make an Arduino-based LED screen that can display a modified Spotify API on the current music being played on my account.</p></li>
                         </ul>
-                        <p class="point">Senior Capstone Project (Future)<a href="https://engineering.tamu.edu/mechanical/academics/capstone-design/index.html" class="github" title="TAMU homepage for capstone design"><i class="fa-solid fa-link"></i></a></p>
+                        <p class="point">Senior Capstone Project (Future)<a href="https://engineering.tamu.edu/mechanical/academics/capstone-design/index.html" title="TAMU homepage for capstone design" target="_blank"><i class="fa-solid fa-link"></i><p class="html_view">Capstone</p></a></p>
                         <ul>
                             <li><p class="discription">Complete whatever the options are at the time of declaring a capstone group.</p></li>
                         </ul>
                     </div> 
-                    <div>
-                        <img class="image1" src="img/image2.jpg" title="Rounds Screen Shot" height="200" width="200">
-                        <img class="image1" src="img/image3.jpg" title="Microcontroller" height="200" width="200">
+
+                    <div class="tech-image-container">
+                        <img class="image2" src="img/image2.jpg" title="Rounds Screen Shot" height="200" width="200">
+                        <img class="image3" src="img/image3.jpg" title="Microcontroller" height="200" width="200">
                     </div>
+
                 </div>
             </div>
         </section>
+
+    <div>
+<body>
