Implemented all style-2 pages except the about me page. Added the switch button from lab. Changed the orignal html files slightly, but did not effect the styling of the style-1 page

--- a/technical.html
+++ b/technical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Martinez - Technical</title>
-    <link rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet" rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
@@ -14,12 +14,12 @@
 
         <nav>
             <ul>
-                <li> <a href="index.html" class="nav-button">Home</a> </li
-                ><li> <a href="technical.html" class="nav-button">Technical</a> </li
-                ><li> <a href="service.html" class="nav-button">Service</a> </li
-                ><li> <a href="resume.html" class="nav-button">Resume</a> </li
-                ><li> <a href="about.html" class="nav-button">About</a> </li
-                ><li> <a href="ai-page.html" class="nav-button">AI Page</a> </li
+                <li> <a href="index.html" id="back-change" class="nav-button">Home</a> </li
+                ><li> <a href="technical.html" id="back-change" class="nav-button">Technical</a> </li
+                ><li> <a href="service.html" id="back-change" class="nav-button">Service</a> </li
+                ><li> <a href="resume.html" id="back-change" class="nav-button">Resume</a> </li
+                ><li> <a href="about.html" id="back-change" class="nav-button">About</a> </li
+                ><li> <a href="ai-page.html" id="back-change" class="nav-button">AI Page</a> </li
             ></ul>
         </nav>
 
@@ -57,4 +57,5 @@
         </section>
 
     <div>
+    <script src="functions.js"></script>
 <body>
