Fixed the about me page style-2 and tried to fix the lag experinced with the switch style function, so I made a whole new function. It was for nothing though, the page transition is still clunky, but I understand javascript better so that cool. Added a copy eamil funnction. This is the final version of iteration 2

--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Martinez - About</title>
-    <link id="mainStyleSheet" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet1" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet2" rel="stylesheet" href="style-2.css" disabled>
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
@@ -25,35 +26,37 @@
 
         <section>
             <div class="box">
-                <p class="title1">More About Me</p>
+                <p class="about-title">More About Me</p>
 
-                <div class="content">
-
-                    <div class="about-image-text-container">
-                        <!-- <p class="point">F1-Project <a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p> -->
-                        <ul>
-                            <li><p class="about-discription">I was born and raised in South Texas. Specifically, a region called the Rio Grande Valley in the small city of Weslaco, TX. Sometime in Elementary school, I joined a weekend program that introduced kids to simple robotics and scratch code. That initial introduction to robotics, and in general programming, made me increasingly interested in the field I am currently studying.  </p></li>
-                        </ul>
-                        <!-- <p class="point">Mods for Rounds Game<a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p> -->
-                        <ul>
-                            <li><p class="about-discription">During this time, I played a lot of soccer. Soccer was the main activity that shaped my youth. I played for numerous clubs for 12 years straight until I quit to focus on running cross country for my highschool.</p></li>
-                        </ul>
-                        <ul>
-                            <li><p class="about-discription">During high school, I was introduced to Java programming by my calculus teacher. He was the one that pushed me to study computer science in college. So, when it came time to apply for colleges, Texas A&M was the only right choice.</p></li>
-                        </ul>
+                <div class="content-resume-about">
+                    <section class="about-image-text-container">
+                        <section>
+                            <!-- <p class="point">F1-Project <a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p> -->
+                            <ul>
+                                <li><p class="about-discription">I was born and raised in South Texas. Specifically, a region called the Rio Grande Valley in the small city of Weslaco, TX. Sometime in Elementary school, I joined a weekend program that introduced kids to simple robotics and scratch code. That initial introduction to robotics, and in general programming, made me increasingly interested in the field I am currently studying.  </p></li>
+                            </ul>
+                            <!-- <p class="point">Mods for Rounds Game<a href="https://github.com/dxmar03" class="github" title="Go to my school github"><i class="fa-solid fa-link"></i></a></p> -->
+                            <ul>
+                                <li><p class="about-discription">During this time, I played a lot of soccer. Soccer was the main activity that shaped my youth. I played for numerous clubs for 12 years straight until I quit to focus on running cross country for my highschool.</p></li>
+                            </ul>
+                            <ul>
+                                <li><p class="about-discription">During high school, I was introduced to Java programming by my calculus teacher. He was the one that pushed me to study computer science in college. So, when it came time to apply for colleges, Texas A&M was the only right choice.</p></li>
+                            </ul>
+                        </section>
                         <img class="image6" src="img/image6.jpg" title="Microcontroller" height="200" width="200">
-                    </div> 
+                    </section> 
 
-                    <div class="about-image-text-container">
+                    <section class="about-image-text-container-2">
                         <img class="image5" src="img/image5.jpg" title="Rounds Screen Shot" height="200" width="200">
-                        <ul>
-                            <li><p class="about-discription-last">Committing to Texas A&M was a life-changing experience. Especially being emitted into the Engineering school. I had never faced such immense struggles, not only academically but personally. Being so far from home and not knowing anyone doing what I was trying left me to overcome some great hurdles. Nevertheless, pressure creates diamonds. Now, approaching my senior year, I'm currently “out of the frying pan and into the fire,” for lack of a better term. I know I can achieve, learn, and apply, anything I put my mind to.  </p></li>
-                        </ul>
-                        <ul>
-                            <li><p class="about-discription">In my time at Texas A&M, I was fortunate enough to travel to places I’ve never formally been to. Growing up in a small border town left me with much to desire. So being able to see and visit so many different cities across Texas has been a privilege. These experiences have been eye-opening and truly pushed me to set my goals high. Aim for the sky, shoot for the stars. </p></li>
-                        </ul>
-                    </div>
-                    
+                        <section>
+                            <ul>
+                                <li><p class="about-discription-last">Committing to Texas A&M was a life-changing experience. Especially being emitted into the Engineering school. I had never faced such immense struggles, not only academically but personally. Being so far from home and not knowing anyone doing what I was trying left me to overcome some great hurdles. Nevertheless, pressure creates diamonds. Now, approaching my senior year, I'm currently “out of the frying pan and into the fire,” for lack of a better term. I know I can achieve, learn, and apply, anything I put my mind to.  </p></li>
+                            </ul>
+                            <ul>
+                                <li><p class="about-discription">In my time at Texas A&M, I was fortunate enough to travel to places I’ve never formally been to. Growing up in a small border town left me with much to desire. So being able to see and visit so many different cities across Texas has been a privilege. These experiences have been eye-opening and truly pushed me to set my goals high. Aim for the sky, shoot for the stars. </p></li>
+                            </ul>
+                        </section>
+                    </section>
                 </div>
 
             </div>
