--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Martinez - Home</title>
-    <link id="mainStyleSheet" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet1" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet2" rel="stylesheet" href="style-2.css" disabled>
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
@@ -36,7 +37,7 @@
                     <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram" target="_blank"><i class="fa-brands fa-square-instagram"></i><p class="html_view">Instagram</p></a>
                     <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i><p class="html_view">Linkedin</p></a>
                     <a href="https://github.com/dxmar03" title="Go to my github" target="_blank"><i class="fa-brands fa-square-github"></i><p class="html_view">Github</p></a>
-                    <button onclick="copyFucntion()" title="copy email"><i class="fa-solid fa-square-envelope"></i><p class="html_view">Copy Email</p></button>
+                    <button onclick="copyFunction('dxmartinez2018@gmail.com')" title="copy email"><i class="fa-solid fa-square-envelope"></i><p class="html_view">Copy Email</p></button>
                     <button onclick="switchStyle()" type="submit" title="switch layout"><i class="fa-solid fa-wand-magic-sparkles"></i><p class="html_view">Magic Switch</p></button>
                 </div>
             </div>
