--- a/technical.html
+++ b/technical.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Martinez - Technical</title>
-    <link id="mainStyleSheet" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet1" rel="stylesheet" href="style.css">
+    <link id="mainStyleSheet2" rel="stylesheet" href="style-2.css" disabled>
     <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
