--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,6 @@
     <title>Diego Martinez - Resume</title>
     <link id="mainStyleSheet1" rel="stylesheet" href="style.css">
     <link id="mainStyleSheet2" rel="stylesheet" href="style-2.css" disabled>
-    <script src="https://kit.fontawesome.com/911fd8f3f4.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
 </head>
 
@@ -29,7 +28,7 @@
                     <p class="title2">Technical Skills / Areas Of Interest</p>
                     <div class="content-resume-about">
                         <div>
-                            <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" target="_blank" title="Vist Course Catalog"><i class="fa-solid fa-link"></i><p class="html_view">Physics Minor Course Catalog</p></a></p>
+                            <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Physics Minor Course Catalog</p></a></p>
                             <ul>
                                 <li><p class="discription">Understanding the physical world and its intricacies is a great passion of mine. Its mathematical implications couple well with computer science. I have interest in electrical systems and there application within both fields. </p></li>
                             </ul>
@@ -41,7 +40,7 @@
 
                         <div>
                             <!-- <img class="image1" src="img/image4.JPG" title="Rounds Screen Shot" height="200" width="200"> -->
-                            <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" target="_blank" title="Vist Course Catalog"><i class="fa-solid fa-link"></i><p class="html_view">Comp Sci Course Catalog</p></a></p>
+                            <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Comp Sci Course Catalog</p></a></p>
                             <ul>
                                 <li><p class="discription">Coming from the Texas A&M School of Engineering I have a lot of math experience. Notably, Calculus 1 through Calculus 3, Different Equations, Linear Algebra, and Discrete Math. Knowledge of Engineering Statistics in association with R Studio is known. </p></li>
                             </ul>
