Final commit: iteration-2, fixed an error with the icon png paths. Fixed some white space and orginization, removed the fontawuseom.com <script> tags cus now im using my own implimented png's. Richy stay a bitch tho.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <img class="image1" src="img/image1.jpg" title="Wedding picture with Llamas" height="200" width="200">
                 </div>
                 <div class="link-hub">
-                    <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram" target="_blank"><img class="icon" src="/img/square-instagram.png"><p class="html_view">Instagram</p></a>
-                    <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin" target="_blank"><img class="icon" src="/img/linkedin.png"><p class="html_view">Linkedin</p></a>
-                    <a href="https://github.com/dxmar03" title="Go to my github" target="_blank"><img class="icon" src="/img/square-github.png"><p class="html_view">Github</p></a>
-                    <button onclick="copyFunction('dxmartinez2018@gmail.com')" title="copy email"><img class="icon" src="/img/envelope-regular.png"><p class="html_view">Copy Email</p></button>
-                    <button onclick="switchStyle()" type="submit" title="switch layout"><img class="icon" src="/img/wand-magic-sparkles-solid.png"><p class="html_view">Magic Switch</p></button>
+                    <a href="https://www.instagram.com/diegocantskate/?hl=en" title="Go to my instagram" target="_blank"><img class="icon" src="img/square-instagram.png"><p class="html_view">Instagram</p></a>
+                    <a href="https://www.linkedin.com/in/diego-martinez-a06ab02b0?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAAErpuKYBjzuXGnaXbzWMLQ2Z8yijjHE8t-A&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3Baa459s%2FZSpScRXDk%2BFV8iw%3D%3D" title="Go to my linkedin" target="_blank"><img class="icon" src="img/linkedin.png"><p class="html_view">Linkedin</p></a>
+                    <a href="https://github.com/dxmar03" title="Go to my github" target="_blank"><img class="icon" src="img/square-github.png"><p class="html_view">Github</p></a>
+                    <button onclick="copyFunction('dxmartinez2018@gmail.com')" title="copy email"><img class="icon" src="img/envelope-regular.png"><p class="html_view">Copy Email</p></button>
+                    <button onclick="switchStyle()" type="submit" title="switch layout"><img class="icon" src="img/wand-magic-sparkles-solid.png"><p class="html_view">Magic Switch</p></button>
                 </div>
             </div>
         </section>
