--- a/resume.html
+++ b/resume.html
@@ -22,13 +22,14 @@
                 ><li> <a href="ai-page.html" id="back-change" class="nav-button">AI Page</a> </li
             ></ul>
         </nav>
+
         <div class="style-2-split">
             <section>
                 <div class="box">
                     <p class="title2">Technical Skills / Areas Of Interest</p>
                     <div class="content-resume-about">
                         <div>
-                            <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Physics Minor Course Catalog</p></a></p>
+                            <p class="point">Physics Minor<a href="https://catalog.tamu.edu/undergraduate/arts-and-sciences/physics-astronomy/physics-minor/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="img/link-solid.png"><p class="html_view">Physics Minor Course Catalog</p></a></p>
                             <ul>
                                 <li><p class="discription">Understanding the physical world and its intricacies is a great passion of mine. Its mathematical implications couple well with computer science. I have interest in electrical systems and there application within both fields. </p></li>
                             </ul>
@@ -40,7 +41,7 @@
 
                         <div>
                             <!-- <img class="image1" src="img/image4.JPG" title="Rounds Screen Shot" height="200" width="200"> -->
-                            <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Comp Sci Course Catalog</p></a></p>
+                            <p class="point">Advanced Mathematics<a href="https://catalog.tamu.edu/undergraduate/engineering/computer-science/bs/#programrequirementstext" target="_blank" title="Vist Course Catalog"><img class="img-chain" src="img/link-solid.png"><p class="html_view">Comp Sci Course Catalog</p></a></p>
                             <ul>
                                 <li><p class="discription">Coming from the Texas A&M School of Engineering I have a lot of math experience. Notably, Calculus 1 through Calculus 3, Different Equations, Linear Algebra, and Discrete Math. Knowledge of Engineering Statistics in association with R Studio is known. </p></li>
                             </ul>
@@ -56,13 +57,17 @@
                     </div>
                 </div>
             </section>
+
             <section class="style-2-download-link">
+
                 <p class="download-text">Download <a href="/img/Martinez_Diego_Resume(V1).pdf" download class="downlad-link">Martinez_Diego_Resume(v1).pdf</a></p>
                 <div class="box">
                     <img class="resume-img" src="img/Martinez_Diego_Resume(V1).jpg" title="Rounds Screen Shot" height="200" width="200">
                 </div>
+                
             </section>
         </div>
+    
     </div>
     <script src="functions.js"></script>
 </body>
