--- a/service.html
+++ b/service.html
@@ -29,11 +29,11 @@
                     
                     <div>
                         <p class="title3">Service Experience</p>
-                        <p class="point">TAMU Student Bonfire<a href="https://bonfire.ag/" target="_blank" title="Visit the Bonfire Homepage"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Bonfire</p></a></p>
+                        <p class="point">TAMU Student Bonfire<a href="https://bonfire.ag/" target="_blank" title="Visit the Bonfire Homepage"><img class="img-chain" src="img/link-solid.png"><p class="html_view">Bonfire</p></a></p>
                         <ul>
                             <li><p class="discription">A member of Hart Hall Student Bonfire. Dedicating weekends to assist in the completion of one of Aggieland's oldest traditions. </p></li>
                         </ul>
-                        <p class="point">The Big Event<a href="https://bigevent.tamu.edu/about/" target="_blank" title="Visit the Big Event Homepage"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Big Event</p></a></p>
+                        <p class="point">The Big Event<a href="https://bigevent.tamu.edu/about/" target="_blank" title="Visit the Big Event Homepage"><img class="img-chain" src="img/link-solid.png"><p class="html_view">Big Event</p></a></p>
                         <ul>
                             <li><p class="discription">Once a year, every year, students of TAMU help clean and beautify the Bryan / College Station Area.</p></li>
                         </ul>
