--- a/technical.html
+++ b/technical.html
@@ -29,11 +29,11 @@
 
                     <div class="text-container">
                         <p class="title3">Technical Experience</p>
-                        <p class="point">F1-Project <a href="https://github.com/dxmar25/myF1Project" title="Go to this project" target="_blank"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">This Project</p></a></p>
+                        <p class="point">F1-Project <a href="https://github.com/dxmar25/myF1Project" title="Go to this project" target="_blank"><img class="img-chain" src="img/link-solid.png"><p class="html_view">This Project</p></a></p>
                         <ul>
                             <li><p class="discription">Designed an automated graph, using Python, that shows the distance margins in the top 3 finishers to scale.</p></li>
                         </ul>
-                        <p class="point">Mods for Rounds Game<a href="https://github.com/JustStokes03/BetterStats" title="Go to this project" target="_blank"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">This Project</p></a></p>
+                        <p class="point">Mods for Rounds Game<a href="https://github.com/JustStokes03/BetterStats" title="Go to this project" target="_blank"><img class="img-chain" src="img/link-solid.png"><p class="html_view">This Project</p></a></p>
                         <ul>
                             <li><p class="discription">Make a real-time stats analysis mod for the game. Displaying dynamic stats as players upgrade there character.</p></li>
                         </ul>
@@ -41,7 +41,7 @@
                         <ul>
                             <li><p class="discription">Make an Arduino-based LED screen that can display a modified Spotify API on the current music being played on my account.</p></li>
                         </ul>
-                        <p class="point">Senior Capstone Project (Future)<a href="https://engineering.tamu.edu/mechanical/academics/capstone-design/index.html" title="TAMU homepage for capstone design" target="_blank"><img class="img-chain" src="/img/link-solid.png"><p class="html_view">Capstone</p></a></p>
+                        <p class="point">Senior Capstone Project (Future)<a href="https://engineering.tamu.edu/mechanical/academics/capstone-design/index.html" title="TAMU homepage for capstone design" target="_blank"><img class="img-chain" src="img/link-solid.png"><p class="html_view">Capstone</p></a></p>
                         <ul>
                             <li><p class="discription">Complete whatever the options are at the time of declaring a capstone group.</p></li>
                         </ul>
