--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diego Martinez - Home</title>
+    <title>My home Page</title>
     <link id="mainStyleSheet1" rel="stylesheet" href="style.css">
     <link id="mainStyleSheet2" rel="stylesheet" href="style-2.css" disabled>
     <link rel="icon" href="img/logo.ico" type="image/x-icon/">
